Revision history for CPAN-Mini

{{$NEXT}}

1.111005  2011-04-29 11:14:10 America/New_York
          no code changes, this release is just intended to be indexed

1.111004  2011-04-26 08:57:00 America/New_York
          overhaul logging: there is now a log_level

          delay creation of scratch dir until needed

          a bunch of tests added for switch and config processing

1.111003  2011-04-18 14:17:36 Europe/Amsterdam
          add tools for building a fake cpan and an xt test for testing online

1.111002  2011-04-16 18:20:43 Europe/Amsterdam

          test for online-ness by HEAD-ing 02packages, not the remote root

1.111001  2011-02-10 19:34:38 America/New_York
          restore six-digit-mantissa versioning to help downstream packagers

1.111     2011-02-05 15:13:17 America/New_York
          add --timeout (thanks, Gabor Szabo!)

1.110     2011-01-27 21:48:34 America/New_York
          if the config file does not exist, do not die or spew warnings; this
          fixes RT #57388

1.100630  2010-03-04 07:57:34 America/New_York
          suppress "using config..." during setup with -qq

1.100593  2010-02-28 16:58:34 America/New_York
          fix a previously unreached bit of code re: basename

1.100592  2010-02-28 15:15:36 America/New_York
          fix insanely stupid typo; need more tests!

1.100591  2010-02-28 15:11:03 America/New_York
          add an option to skip source code control files (thanks, brian d foy)

1.100590  2009-02-28
          add -C switch to allow alternate config file (thanks, brian d foy)
          getopt switches are now correctly case-sensitive (thanks, brian)
          improve subclassability for config file and output (thanks, brian)
          switch to Dist::Zilla for release management

0.576     2009-01-16
          add repo to metadata

0.575     2009-01-12
          add no_conn_cache argument

0.574     2008-11-26
          fix broken prereq declaration in Makefile.PL

0.573     2008-11-25